# yandex-market-bot

./: .gitignore  Dockerfile  LICENSE  README.md  babel.cfg  docker-compose.yml  main.py  pyproject.toml  sent_orders.json
bot/: api.py  handlers.py
locale/en/LC_MESSAGES/: messages.po
locale/ru/LC_MESSAGES/: messages.po
src/: main.py
src/api/: base_client.py  client.py  models.py  ozon_client.py  parsers.py  services.py  yandex_client.py
src/bot/: handlers.py  tasks.py
src/config/: settings.py
src/db/: redis_db.py
src/utils/: logging.py
tests/: test_api.py
