[tool.poetry]
name = "market"
version = "0.1.0"
description = "Бот для работы с заказами Яндекс.Маркета"
authors = ["saikonohack <saintklovus@gmail.com>"]
readme = "README.md"
packages = [{include = "bot"}]

[tool.poetry.dependencies]
python = ">=3.13"  # Указываем минимальную версию Python
aiogram = "^3.13.1"  # Последняя версия на момент 03.2025 (проверьте актуальность)
requests = "^2.32.3"
python-dotenv = "^1.0.1"
colorlog = "^6.8.2"  # Стабильная версия

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"